# ml-end-to-end-pipeline

./: .gitignore  Dockerfile  README.md  logging_config.yaml  pyproject.toml  requirements.txt  test_batch.json
.github/workflows/: ci.yml
deployments/: metadata_etl.yaml
notebooks/: run_metadata.ipynb
src/: data_review.ipynb
src/etl/: build_aoi_polygons.py  ingest.py  load.py  metadata.py  run_metadata_local.py  run_metdata.py  schema.py  transform.py
src/ml_end_to_end_pipeline/api/: app.py  schemas.py
src/pipelines/: metadata_flow.py
src/prefect/: sn7_metadata_flow.py
tests/: conftest.py  test_features.py  test_inference.py  test_pipeline.py  test_sn7_metadata.py
tests/api/: test_health.py  test_predict_batch.py  test_predict_single.py
